WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286645
Changing opaqueness of a backdrop root doesn't update the filters
https://bugs.webkit.org/show_bug.cgi?id=286645
Summary
Changing opaqueness of a backdrop root doesn't update the filters
Matt Woodrow
Reported
2025-01-28 14:14:22 PST
<
rdar://141454647
> If commitState.backdropRootIsOpaque, then GraphicsLayerCA needs to re-set the filters so that the CA filter set gets recomputed with the new opaque value.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2025-01-28 14:16:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39649
EWS
Comment 2
2025-01-28 17:46:18 PST
Committed
289476@main
(203bea74f42d): <
https://commits.webkit.org/289476@main
> Reviewed commits have been landed. Closing PR #39649 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug