Changing opaqueness of a backdrop root doesn't update the filters. https://bugs.webkit.org/show_bug.cgi?id=286645 <rdar://141454647>

Reviewed by Simon Fraser.

If commitState.backdropRootIsOpaque, then GraphicsLayerCA needs to re-set the
filters so that the CA filter set gets recomputed with the new opaque value.

No test, since there's no way to dump the CA filters from the UI process. The
actual rendering should be (close to) identical and doesn't make for a useful
stable comparison.

* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateBackdropFilters):

Canonical link: https://commits.webkit.org/289476@main